working on views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,11 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="container">
+		<header id="main_head">
+		</header>	
 
 <%= yield %>
-
+	</div>
 </body>
 </html>
