--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the pages controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+	font-family: $verdana;
+	background: #ffffff url('/assets/bg.jpg') repeat;
+}
+
+.container {
+	margin-left:auto;
+	margin-right:auto;
+	width:960px;
+}
