working on views

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,10 @@
 <body>
 	<div class="container">
 		<header id="main_head">
+			<div id="logo">
+				<a href="/" ><img src='/assets/logo.png'/></a>
+			</div>	
+			<div class="divider"></div>
 		</header>	
 
 <%= yield %>
