--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -7,7 +7,21 @@ body {
 }
 
 .container {
+	margin-top:30px;
 	margin-left:auto;
 	margin-right:auto;
 	width:960px;
+}
+
+.main_head {
+	width:940px;
+	position:relative;
+}
+
+#logo img {
+	width:220px;
+	height:83px;
+	display:block;
+	margin-left:auto;
+	margin-right:auto;
 }
