--- a/app/assets/stylesheets/pages.css.scss
+++ b/app/assets/stylesheets/pages.css.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 body {
 	font-family: $verdana;
-	background: #ffffff url('/assets/bg.jpg') repeat;
+	background: url('/assets/bg.jpg') repeat;
 }
 
 .container {
@@ -24,4 +24,10 @@ body {
 	display:block;
 	margin-left:auto;
 	margin-right:auto;
+}
+.divider {
+	margin-top:25px;
+	height:5px;
+	width:940px;
+	background-image:url('/assets/hr.png');
 }
