--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,8 +12,12 @@
 				        <img src= <%= user.image %>> <h3><%= user.name %></h3>
 				    </div>
 					<% end %>  
-				</div>	
+				</div>
+				<% if session[:user_id]%>
+				  <p>Thanks for signing up!</p>	
+				<% else%>
 				<%= link_to image_tag("fb_signup_button.gif"), "/auth/facebook", id: "sign_in"%>
+				<% end %>
 		</div>	
     </div>
 </div>
