--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -21,5 +21,10 @@
 		</div>	
     </div>
 </div>
-
+<div class="row">
+  <div class="cal">
+	<iframe   	    src="https://www.google.com/calendar/embed?showTitle=0&amp;height=450&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=1r33o6qmukoj7qqmuukcn63bqc%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style=" border-width:0 " width="450" height="450" frameborder="0" scrolling="no"></iframe>
+    </div>	
+  </div>
+</div>
 
