--- a/app/views/user_mailer/signup_confirmation.text.erb
+++ b/app/views/user_mailer/signup_confirmation.text.erb
@@ -2,6 +2,13 @@
 
 Thanks for signing up! 
 
-Cheers,
+Startup Matchup is the ultimate place to learn and hone your skills. Competition drives innovation. We will put you in a group with like minded, ambitious developers to create a project from concept to launch in a fun, competition driven, team based gauntlet. Compete against other teams in a semester long competition to develop your skills, learn agile programming, and apply your work to real products that you will launch by the end of the semester.
+
+Join our <a href="https://www.facebook.com/groups/152108291594940/">Facebook Group</a> for the latest updates and conversation. 
+
+Also, Check out our <a href="http://www.reddit.com/r/StartupMatchup/">subreddit</a>!
+
+See you soon,
 
 The Startup Matchup Team
+
