--- a/app/views/user_mailer/signup_confirmation.html.erb
+++ b/app/views/user_mailer/signup_confirmation.html.erb
@@ -2,19 +2,19 @@
 <head>
 </head>
 <body>
-<%= @user.name %>,
+<p><%= @user.name %>,</p>
 <br/>
-Thanks for signing up! 
+<p>Thanks for signing up!</p> 
 <br/>
 <p>Startup Matchup is the ultimate place to learn and hone your skills. Competition drives innovation. We will put you in a group with like minded, ambitious developers to create a project from concept to launch in a fun, competition driven, team based gauntlet. Compete against other teams in a semester long competition to develop your skills, learn agile programming, and apply your work to real products that you will launch by the end of the semester.</p>
 <br/>
-Join our <a href="https://www.facebook.com/groups/152108291594940/">Facebook Group</a> for the latest updates and conversation. 
+<p>Join our <a href="https://www.facebook.com/groups/152108291594940/">Facebook Group</a> for the latest updates and conversation.</p> 
 <br/>
-Also, Check out our <a href="http://www.reddit.com/r/StartupMatchup/">subreddit</a>!
+<p>Also, Check out our <a href="http://www.reddit.com/r/StartupMatchup/">subreddit</a> !</p>
 <br/>
-See you soon,
+<p>See you soon,</p>
 <br/>
-The Startup Matchup Team
+<p>The Startup Matchup Team</p>
 </body>
 </html>
  
