--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,19 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-	<div class="container">
-		<header id="main_head">
-			<div id="logo">
-				<a href="/" ><img src='/assets/logo.png'/></a>
-			</div>	
-				<div id="nav_wrapper">
-					<ul>
-					<li><a href="https://www.facebook.com/groups/152108291594940/">Facebook</a></li>
-					<li><a href="http://www.reddit.com/r/StartupMatchup">Reddit</a></li>
-					<li><a href="http://www.reddit.com/r/StartupMatchup/comments/z7bu8/faq_all_you_need_to_know/">FAQ</a></li>
-					</ul>	
-				</div>
-		</header>	
+	<div id="container">
 
 <%= yield %>
 	</div>
