working on html layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,8 +8,38 @@
 </head>
 <body>
 	<div id="container">
-
+		<div id="header">
+			<div id="navigation">
+				<div class="nav">
+					<ul>
+						<li>
+							<a></a>
+						</li>
+						<li>
+							<a></a>
+						</li>		
+					</ul>	
+				</div>
+				<div id="logo">
+					<a>
+						<img>
+					</a>	
+				</div>
+				<div class="nav">
+					<ul>
+						<li>
+							<a></a>
+						</li>
+						<li>
+							<a></a>
+						</li>
+					</ul>	
+				</div>			
+			</div>	
+		</div>	
 <%= yield %>
+        <div id="footer">
+		</div>
 	</div>
 </body>
 </html>
