--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,12 +21,12 @@
 					<ul>
 						<li id="nav_about">
 							<a id="about_link">About</a>
-						</li> 
-						<li id="nav_calandar">
-							<a id="calandar_link">Calendar</a>
-						</li>		
+						</li> 	
 						<li id="nav_signup">
 							<a id="signup_link">Signup</a>
+						</li>
+						<li id="nav_cal">
+							<a id="cal_link">Dates</a>
 						</li>
 						<li id="nav_contact">
 							<a id="contact_link">Contact</a>
@@ -36,10 +36,9 @@
 			</div>			
 		</div>	
 	</div>
-	<div id="container_wrapper">	
+	<div id="container_wrapper">			
 <%= yield %>
-        <div id="footer">
-		</div>
 	</div>
+
 </body>
 </html>
