--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -12,16 +12,16 @@
 				<div id="about">
 					<div id="about_info">
 						<p><span>Big Thinkers Wanted.</span>
-						Ever had an idea for a website? The next Facebook? A mobile app or an awesome game? But had no idea where to start or how to develop it? Startup Matchup is where to begin. Develop your skills, learn agile programming, and build awesome shit. Join us for the Fall session! Will you be the next big thing?
-						</p>
-		    		</div>		
+						Ever had an idea for a website? The next Facebook? A mobile app or an awesome game? But had no idea where to start or how to develop it? Startup Matchup is where to begin. Develop your skills, learn agile programming, and build awesome shit. Join us at URI for the Fall session! Do you have what it takes?
+						</p>	
+						<p id="second_about"><span>What is Startup Matchup?</span>
+						Startup Matchup is the ultimate place to learn and hone your skills. Competition drives innovation. We will put you in a group with like minded, ambitious developers to create a project from concept to launch in a fun, competition driven, team based gauntlet. Apply your learning to real products that will launch by the end of the semester.</p>
+					</div>	
 				</div>	
 				<div id="signup">
-					<h1 id="signup_head">Signup!</h1>	
+					<h1 id="signup_head">Join us. Login to signup!</h1>	
 					<div id="signup_form"> 
 							  <%= link_to image_tag("fb_login.jpg"), "/auth/facebook", id: "sign_in"%>
-							 <h1>--or--</h1>
-							 
 					</div>
 					<div id="signedup_fb">
 						<h3 id="fb_heading">Look who's signed up</h3>
@@ -35,8 +35,28 @@
 					</div>		
 				</div>
 				<div id="cal">
+					<h1 id="cal_head">Upcoming meetups</h1>
+					<div id="cal_wrapper">
+						<iframe src="https://www.google.com/calendar/embed?showTitle=0&amp;showNav=0&amp;showPrint=0&amp;showTabs=0&amp;showCalendars=0&amp;showTz=0&amp;height=650&amp;wkst=1&amp;bgcolor=%23ffffff&amp;src=1r33o6qmukoj7qqmuukcn63bqc%40group.calendar.google.com&amp;color=%232F6309&amp;ctz=America%2FNew_York" style=" border-width:0 " width="650" height="650" frameborder="0" scrolling="no"></iframe>
+					</div>	
 				</div>	
 				<div id="contact">
+					<h1 id="contact_head">Get in touch</h1>
+					<div id="contact_social">
+						<h3>Get Social.</h3> 
+						<ul>
+						<li><a class="link" href="https://www.facebook.com/groups/152108291594940/">
+							<h4>Facebook</h4>
+						</a></li>
+						<li><a id="link" href="http://www.reddit.com/r/StartupMatchup">
+							<h4>Reddit</h4>
+						</a></li>
+						<li><a id="link" href="mailto:bordeleau.cj@gmail.com">
+							<h4>Email</h4>
+						</a></li>
+						</ul>
+					</div>		
+				</div>
 				</div>
 			</div>	
 		</div>		
