--- a/app/assets/stylesheets/pages.sass
+++ b/app/assets/stylesheets/pages.sass
@@ -113,6 +113,7 @@ body
 
 #signup_form
 	+grid(4)
+	height: 305px
 	float: left
 
 #signedup_fb
@@ -123,6 +124,61 @@ body
 #signedup_fb #fb_heading 
 	margin-bottom: 10px
 	
+#signedup_fb #member_scroll	
+	height: 250px
+	width: 300px
+	overflow: scroll
+
+#cal 
+	+grid(9)
+	padding: 0px 40px 60px 40px
+	
+	
+#cal h1 
+	font: normal normal 25px/34px 'DINRegular', Arial, Sans-serif
+	color: #529944 
+	letter-spacing: -.7px
+	border-bottom: 1px dotted #afafaf
+#cal #cal_wrapper
+	width: 650px
+	padding-top: 30px
+	margin: 0 auto
+	
+#contact 
+	+grid(9)
+	background: white
+	padding: 0px 40px 100px 40px
+
+#contact h1 
+	font: normal normal 25px/34px 'DINRegular', Arial, Sans-serif
+	color: #529944 
+	letter-spacing: -.7px
+	border-bottom: 1px dotted #afafaf
+
+#contact #contact_social h3 
+	margin: 0 auto
+	float: right
+	color: #fff 
+	background: #529944	
+	font: 15px/20px 'DINRegular'
+	padding: 5px
+	text-transform: uppercase
+
+#contact #contact_social a
+	padding-top: 40px
+	padding-right: 20px
+	display: block
+	text-decoration: none
+	float: left
+
+#footer	
+	+grid(9)
+	background: white
+	padding: 0px 40px 0px 40px
+	display: block
+
+	
+
 
 	
 	
