--- a/app/views/user_mailer/signup_confirmation.html.erb
+++ b/app/views/user_mailer/signup_confirmation.html.erb
@@ -6,7 +6,7 @@
 
 <p>Thanks for signing up!</p> 
 
-<p>Startup Matchup is the ultimate place to learn and hone your skills. Competition drives innovation. We will put you in a group with like minded, ambitious developers to create a project from concept to launch in a fun, competition driven, team based gauntlet. Compete against other teams in a semester long competition to develop your skills, learn agile programming, and apply your work to real products that you will launch by the end of the semester.</p>
+<p>We are preparing for our first meeting and are looking for people to spread the word. Recruit you friends!</p>
 
 <p>Join our <a href="https://www.facebook.com/groups/152108291594940/">Facebook Group</a> for the latest updates and conversation.</p> 
 
