added meta tags and favicon

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,8 @@
 <html>
 <head>
   <title>Startup Matchup - Learn Programming, Build Cool Stuff</title>
+  <meta name="description" content="Technology group at the University of Rhode Island"/>
+  <meta name="keywords" content="programming, URI, RI, Startup, Matchup, development, code, learn"/>	
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
