--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,8 @@
 <head>
   <title>Startup Matchup - Learn Programming, Build Cool Stuff</title>
   <meta name="description" content="Technology group at the University of Rhode Island"/>
-  <meta name="keywords" content="programming, URI, RI, Startup, Matchup, development, code, learn"/>	
+  <meta name="keywords" content="programming, URI, RI, Startup, Matchup, development, code, learn"/>
+  <link rel="shortcut icon" href="/favicon.ico" />	
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
