--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,7 +4,7 @@
   <title>Startup Matchup - Learn Programming, Build Cool Stuff</title>
   <meta name="description" content="Technology group at the University of Rhode Island"/>
   <meta name="keywords" content="programming, URI, RI, Startup, Matchup, development, code, learn"/>
-  <link rel="shortcut icon" href="favicon.ico" />	
+  <link rel="shortcut icon" type="image/png" href="favicon.ico" />	
   <%= stylesheet_link_tag "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
